lexer_parser/src/test/exempleFile/miniJaja/success/oneFunctionIntWithIntrs.mjj
class A {
    int f(){
        int x = 4;
        x++;
        return x;
    };

    main{
        int x = f();
    }
}